[Downloads] Use a shorter status string in chrome://downloads.

R=dbeam@chromium.org
BUG=609255

Review-Url: https://codereview.chromium.org/1954553002
Cr-Commit-Position: refs/heads/master@{#391828}

Former-commit-id: b03831ed8a4c6b20f60dfbc7b8bccae04bbfd7db